[package]
name        = "picontrol"
license     = "MIT"
version     = "0.3.0"
authors     = ["Domenic Quirl", "Enrico Mezzato"]
description = "A library to access the RevolutionPi industrial PLC. A console application similar to the piTest command line tool is provided as an example."
edition     = "2021"
repository  = "https://github.com/domenicquirl/picontrol-rs"
# build = "build.rs"

# [build-dependencies]
# bindgen = "*"

[profile.release]
# debug = true

[dependencies]
nix       = "0.23"
clap      = "3"
byteorder = "1"

[dev-dependencies]
memoffset = "0.6"
